--- a/ss1_tong_quan_spring_mvc/thuc_hanh/customer-management-spring-overview/build.gradle
+++ b/ss1_tong_quan_spring_mvc/thuc_hanh/customer-management-spring-overview/build.gradle
@@ -16,4 +16,5 @@ dependencies {
     implementation group: 'javax.servlet', name: 'servlet-api', version: '2.5'
     implementation group: 'javax.servlet', name: 'servlet-api', version: '2.5'
     implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.2'
+    implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
 }
