--- a/ss4_data_binding_and_form/bai_tap/medical_registration_form/build.gradle
+++ b/ss4_data_binding_and_form/bai_tap/medical_registration_form/build.gradle
@@ -32,3 +32,8 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+compileJava.options.encoding = 'UTF-8'
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
