--- a/ss11_web_service_va_restful/bai_tap/my_blog_extend_spring_boot_web_service_restful/src/main/resources/application.properties
+++ b/ss11_web_service_va_restful/bai_tap/my_blog_extend_spring_boot_web_service_restful/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/customer_manager_restful_db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/my_blog_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
